Apply the sticky footer only on screens taller then 556 pixels to better handle small screens. Avoid any restriction on mobile.

--- a/scss/partials/_entry_edit.scss
+++ b/scss/partials/_entry_edit.scss
@@ -293,10 +293,20 @@ div.entry-edit-modal-container {
           @include avenir_R();
           font-size: 16px;
           line-height: 22px;
-          min-height: 240px;
-          max-height: calc(100vh - 315px);
-          overflow-y: auto;
-          overflow-x: hidden;
+
+          @media screen and (min-height: 556px) {
+            min-height: 240px;
+            max-height: calc(100vh - 315px);
+            overflow-y: auto;
+            overflow-x: hidden;
+          }
+
+          @include mobile() {
+            min-height: initial;
+            max-height: initial;
+            overflow-x: auto;
+            overflow-y: auto;
+          }
 
           & > *:first-child {
             margin-top: 0px;
