--- a/scss/partials/_fullscreen_post.scss
+++ b/scss/partials/_fullscreen_post.scss
@@ -332,13 +332,12 @@ div.fullscreen-post-container {
             @include avenir_R();
             font-size: 16px;
             line-height: 22px;
-            min-height: 240px;
-            max-height: calc(100vh - 315px);
-            overflow-y: auto;
-            overflow-x: hidden;
-
-            @include mobile() {
-              min-height: initial;
+            
+            @media screen and (min-height: 556px) {
+              min-height: 240px;
+              max-height: calc(100vh - 315px);
+              overflow-y: auto;
+              overflow-x: hidden;
             }
 
             & > *:first-child {
